--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -32,7 +32,7 @@ displayName="Random Spawn" #mandatory
 # A text field displayed in the mod UI
 authors="nikonru" #optional
 # The description text for the mod (multi line!) (#mandatory)
-description='RTP the Player when first logging in'
+description='Timeout after spawn'
 
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.spawntimeout]] #optional
@@ -45,7 +45,7 @@ description='RTP the Player when first logging in'
    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
    ordering="NONE"
    # Side this dependency is applied on - BOTH, CLIENT or SERVER
-   side="BOTH"
+   side="SERVER"
 # Here's another dependency
 [[dependencies.spawntimeout]]
    modId="minecraft"
@@ -53,5 +53,5 @@ description='RTP the Player when first logging in'
    # This version range declares a minimum of the current minecraft version up to but not including the next major version
    versionRange="[1.20.1,1.21)"
    ordering="NONE"
-   side="BOTH"
+   side="SERVER"
 
