--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -33,6 +33,7 @@ displayName="Random Spawn" #mandatory
 authors="nikonru" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='Timeout after spawn'
+side="SERVER"
 
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.spawntimeout]] #optional
